Chrome Image Stretched Issue

--- a/sm-shop/src/main/webapp/resources/templates/december/css/style.css
+++ b/sm-shop/src/main/webapp/resources/templates/december/css/style.css
@@ -839,7 +839,6 @@ body {}
 }
 .product-img > a{
 	position:relative;
-	display:block;
 	transition:all .4s;
 }
 .product-img .seceond_img{
